# c-gtk-python

./: .gitignore  CMakeLists.txt  pyproject.toml
scripts/: hello.py
src/: main.c
